move images and stop overflow on wrapper

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -282,3 +282,7 @@ button,
         }
     }
 }
+
+.wrapper {
+    overflow: hidden;
+}
